--- a/.github/workflows/Build_AX6-NSS-firmware-12.1-wo-NSS-mesh.yml
+++ b/.github/workflows/Build_AX6-NSS-firmware-12.1-wo-NSS-mesh.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build AX6-NSS
+name: Build AX6-NSS-AX6-NSS-firmware-12.1-wo-NSS-mesh
 
 on:
   repository_dispatch:
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/TerryLip/AX6NSS
   REPO_BRANCH: qualcommax-6.1-nss-wifi
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  CONFIG_FILE: openwrt/AX6-NSS-firmware-12.1-wo-NSS-mesh.config
   #DIY_P3_SH: sh/ARMv8_diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
@@ -100,7 +100,6 @@ jobs:
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && mv $FEEDS_CONF openwrt/feeds.conf.default
-        chmod +x $DIY_P1_SH
         cd openwrt
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
