--- a/.github/workflows/Build_AX6NSS_mytest_6-6.yml
+++ b/.github/workflows/Build_AX6NSS_mytest_6-6.yml
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/TerryLip/AX6NSS
   REPO_BRANCH: qualcommax-6.x-nss-wifi
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: my-testconfig
+  CONFIG_FILE: my-testconfig-6-6
   #DIY_P3_SH: sh/ARMv8_diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
