--- a/.github/workflows/Build_AX6NSS.yml
+++ b/.github/workflows/Build_AX6NSS.yml
@@ -174,6 +174,8 @@ jobs:
     - name: Create release
       id: release
       uses: ncipollo/release-action@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This is the missing piece
       with:
         name: ${{ env.DATE }} OpenWrt for ${{ env.PRODUCT_NAME }}
         allowUpdates: true
